--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,38 @@
-# Firebase build and deployment files
-/firebase-debug.log
-/firebase-debug.*.log
-.firebaserc
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Firebase Hosting
-/firebase.json
-*.cache
-hosting/.cache
+# Dependencies
+node_modules
+.pnp
+.pnp.js
 
-# Firebase Functions
-/functions/node_modules/
-/functions/.env
-/functions/package-lock.json
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Firebase Emulators
-/firebase-*.zip
-/.firebase/
-/emulator-ui/
+# Testing
+coverage
 
-# Logs
-*.log
+# Turbo
+.turbo
+
+# Vercel
+.vercel
+
+# Build Outputs
+.next/
+out/
+build
+dist
+
+
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment files (local configs)
-/.env.*
+# Misc
+.DS_Store
+*.pem
