--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -45,23 +45,7 @@
           }
         }
       ],
-      [
-        "expo-font",
-        {
-          "fonts": [
-            "/Users/mimi/Documents/PORTFOLIO PROJECTS/TerraHaven/node_modules/@expo-google-fonts/lato/100Thin/Lato_100Thin.ttf",
-            "/Users/mimi/Documents/PORTFOLIO PROJECTS/TerraHaven/node_modules/@expo-google-fonts/lato/100Thin_Italic/Lato_100Thin_Italic.ttf",
-            "/Users/mimi/Documents/PORTFOLIO PROJECTS/TerraHaven/node_modules/@expo-google-fonts/lato/300Light/Lato_300Light.ttf",
-            "/Users/mimi/Documents/PORTFOLIO PROJECTS/TerraHaven/node_modules/@expo-google-fonts/lato/300Light_Italic/Lato_300Light_Italic.ttf",
-            "/Users/mimi/Documents/PORTFOLIO PROJECTS/TerraHaven/node_modules/@expo-google-fonts/lato/400Regular/Lato_400Regular.ttf",
-            "/Users/mimi/Documents/PORTFOLIO PROJECTS/TerraHaven/node_modules/@expo-google-fonts/lato/400Regular_Italic/Lato_400Regular_Italic.ttf",
-            "/Users/mimi/Documents/PORTFOLIO PROJECTS/TerraHaven/node_modules/@expo-google-fonts/lato/700Bold/Lato_700Bold.ttf",
-            "/Users/mimi/Documents/PORTFOLIO PROJECTS/TerraHaven/node_modules/@expo-google-fonts/lato/700Bold_Italic/Lato_700Bold_Italic.ttf",
-            "/Users/mimi/Documents/PORTFOLIO PROJECTS/TerraHaven/node_modules/@expo-google-fonts/lato/900Black/Lato_900Black.ttf",
-            "/Users/mimi/Documents/PORTFOLIO PROJECTS/TerraHaven/node_modules/@expo-google-fonts/lato/900Black_Italic/Lato_900Black_Italic.ttf"
-          ]
-        }
-      ]
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
