--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -14,6 +14,7 @@
     "@fontsource/luckiest-guy": "^5.2.8",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.11",
+    "astro-icon": "^1.1.5",
     "tailwindcss": "^4.1.18"
   }
 }
